@@ -23,10 +23,10 @@ if test -f /etc/default/nova-api; then
 fi
 
 mkdir -p /var/run/nova
-chown nova:root /var/run/nova
+chown nova:root /var/run/nova/
 
 mkdir -p /var/lock/nova
-chown nova:root /var/lock/nova
+chown nova:root /var/lock/nova/
 
 uid="$(getent passwd nova | cut -f3 -d:)"
 gid="$(getent passwd nova | cut -f4 -d:)"
