@@ -8,10 +8,10 @@ chdir /var/run
 
 pre-start script
     mkdir -p /var/run/nova
-    chown nova:root /var/run/nova
+    chown nova:root /var/run/nova/
 
 	mkdir -p /var/lock/nova
-	chown nova:root /var/lock/nova
+	chown nova:root /var/lock/nova/
 end script
 
 script
