@@ -28,10 +28,10 @@ if [ -x "${VGDISPLAY}" -a -z "${nova_volume_group}" ] ; then
 fi
 
 mkdir -p /var/run/nova
-chown nova:root /var/run/nova
+chown nova:root /var/run/nova/
 
 mkdir -p /var/lock/nova
-chown nova:root /var/lock/nova
+chown nova:root /var/lock/nova/
 
 uid="$(getent passwd nova | cut -f3 -d:)"
 gid="$(getent passwd nova | cut -f4 -d:)"
